# robot-testing-framework

./: .gitignore  CMakeLists.txt
examples/python-plugin/: mytest.py
src/plugins/python/: CMakeLists.txt
src/plugins/python/include/robottestingframework/python/: PythonPluginLoader.h
src/plugins/python/include/robottestingframework/python/impl/: PythonPluginLoader_impl.h
src/plugins/python/robottestingframework/: __init__.py  __init__.pyi
src/plugins/python/src/: PythonPluginLoader.cpp
src/robottestingframework-testrunner/: CMakeLists.txt
src/robottestingframework-testrunner/include/: JSONOutputter.h  PluginFactory.h  PluginRunner.h
src/robottestingframework-testrunner/src/: JSONOutputter.cpp  PluginRunner.cpp  SuiteRunner.cpp  main.cpp
tests/python/: PythonTestCase.py
